# logit_lens_llama_advanced

./: .gitignore  README.md  analysis_simple.ipynb  logit_lens.py  main.py  model.py  package-lock.json  pyproject.toml  qwen3_model.py  server.py  server_v2.py  stuff.ipynb  test_attention_blocking.py  test_model.py
backends/: __init__.py  base.py  custom_backend.py
backends/transformerlens_backend/: __init__.py  tl_backend.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  SearchableModelDropdown.tsx  index.css  transformerlens-models.ts  types.ts
saved_states/20251122_181614_paris/: config.json
saved_states/20251122_181733_paris_zero/: config.json
saved_states/20251122_182735_best food/: config.json
saved_states/20251122_183022_France_others/: config.json
tests/: debug_bos.py  test_all_layers.py  test_attention.py  test_attn_debug.py  test_chat_template.py  test_memory.py  test_model.py  test_model_sanity.py
tests_backend/: __init__.py  debug_inference.py  test_attention_blocking.py  test_backend_parity.py  test_backends.py  test_norm_debug.py
